fix: replace Unicode marker with ASCII, add closing brace to declaration body stubs
Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/7754e307-a19c-45a5-82ec-035046942cdd

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>